matnn/cilium-network-policy/allow-ingress-nginx-to-nginx.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-nginx-to-nginx
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: ingress-nginx
    toPorts:
    - ports:
      - port: "4143"  # Linkerd proxy port
        protocol: TCP
