matnn/cilium-network-policy/allow-k8s-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-k8s-api
  namespace: default
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - host
    - remote-node
    - kube-apiserver
    toPorts:
      - ports:
        - port: "6443"
          protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "kube-system"
        "k8s:k8s-app": "kube-dns"
    toPorts:
      - ports:
        - port: "53"
          protocol: UDP
