matnn/cilium-network-policy/allow-prometheus-to-matnn.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-matnn
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: matnn
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
