matnn/cilium-network-policy/cert-manager-ingress-egress-minimal.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-to-k8s-api
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - kube-apiserver
  - toEntities:
    - world
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "kube-system"
        "k8s:k8s-app": "kube-dns"
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  egressDeny: []
