matnn/cilium-network-policy/nginx-ingress-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-restricted-egress
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: nginx

  ingress:
  - fromEntities:
    - world
    - cluster
    - host
    toPorts:
      - ports:
        - port: "80"
          protocol: TCP

  egress:
  # 1. Allow API server + node communications
  - toEntities:
    - host
    - remote-node
    - kube-apiserver
    toPorts:
      - ports:
          - port: "6443"
            protocol: TCP

  # 2. Allow DNS only to kube-dns
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
    toPorts:
      - ports:
          - port: "53"
            protocol: UDP
          - port: "53"
            protocol: TCP

  # 3. Allow HTTP/HTTPS to world
  - toEntities:
    - world
    - cluster
    toPorts:
      - ports:
          - port: "80"
            protocol: TCP
          - port: "443"
            protocol: TCP
          - port: "53"
            protocol: UDP
          - port: "53"
            protocol: TCP
